--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=3000
 server.servlet.context-path=/smart-auto
 
 
-DB Details
+#DB Details
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -11,5 +11,5 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# prevent from deleting table on load
+# Prevent from deleting table on load
 spring.jpa.hibernate.ddl-auto=update
